--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wc-simple-components-lib",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "main": "./dist/wc-simple-components-lib.es.js",
   "exports": {
     ".": "./dist/wc-simple-components-lib.es.js"
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.4",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "@storybook/addon-actions": "^6.4.19",
     "@storybook/addon-essentials": "^6.4.19",
     "@storybook/addon-links": "^6.4.19",
