--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wc-simple-components-lib",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "main": "./dist/wc-simple-components-lib.es.js",
   "exports": {
     ".": "./dist/wc-simple-components-lib.es.js"
@@ -14,7 +14,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "chromatic": "npx chromatic --project-token=51e1ca2ace26"
   },
   "dependencies": {
     "lit": "^2.0.2"
@@ -25,8 +26,10 @@
     "@storybook/addon-actions": "^6.4.19",
     "@storybook/addon-essentials": "^6.4.19",
     "@storybook/addon-links": "^6.4.19",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/web-components": "^6.4.19",
     "babel-loader": "^8.2.3",
+    "chromatic": "^6.5.1",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
   },
